--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <main>
-    <section class="flex items-center justify-center flex-col md:flex-row md:px-[100px] px-[15px]">
+    <section class="flex items-center justify-center flex-col md:flex-row md:px-[100px] px-[15px] h-[536px]">
         <div class="pt-[40px] pb-[40px] md:pt-[0px] md:pb-[0px]">
             <p class="text-[20px] font-bold font-second text-[#475569]">Kipper consultoria</p>
             <p class="md:text-[72px] text-[35px] md:leading-[80px] leading-[40px] font-primary text-[#0F172A] font-bold">A consultoria que você busca para seu software</p>
@@ -8,8 +8,8 @@
         <img ngSrc="../../../assets/first.svg" width="669" height="536" alt="imgMain" priority>
     </section>
 
-    <section class="flex flex-col md:flex-row md:items-center justify-center md:px-[100px] px-[15px] my-[60px]">
-        <div class="md:border-solid md:border-b-[10px] md:border-[#5222D0]"><p class="font-second md:text-[60px] md:leading-[65px] font-semibold text-[30px] leading-[35px] text-[#0F172A] pb-[8px]">95% das <br> empresas</p></div>
+    <section class="flex flex-col md:flex-row md:items-center justify-center md:px-[100px] px-[15px] my-[60px] h-[200px]">
+        <div class="md:border-solid md:border-b-[10px] md:border-[#5222D0] h-[160px]"><p class="font-second md:text-[60px] md:leading-[65px] font-semibold text-[30px] leading-[35px] text-[#0F172A] pb-[8px]">95% das <br> empresas</p></div>
         <p class="font-primary md:text-[40px] md:leading-[45px] md:ml-[50px] text-[30px] leading-[35px] italic font-light">não sabem como lidar com problemas de <strong class="text-[#351686]">escalibilidade</strong> e grande volume de requisições.</p>
     </section>
     <div class="items-center justify-center flex"><button class="bg-[#351686] text-white md:w-[450px] md:h-[70px] font-primary font-bold md:text-[24px] text-[18px] rounded-[30px] p-4">Fale com nossos especialistas</button></div>
