--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,15 +14,15 @@
     </section>
     <div class="items-center justify-center flex"><button class="bg-[#351686] text-white md:w-[450px] md:h-[70px] font-primary font-bold md:text-[24px] text-[18px] rounded-[30px] p-4">Fale com nossos especialistas</button></div>
 
-    <section class="flex items-center justify-center md:px-[100px] px-[15px] flex-col md:flex-row md:my-[80px] my-[60px] gap-[60px] md:gap-[0px]">
-        <div class="md:w-1/2 flex-col flex justify-center">
+    <section class="flex items-center justify-center md:px-[100px] px-[15px] flex-col md:flex-row md:my-[80px] my-[60px] gap-[60px] md:gap-[0px]  h-[700px]">
+        <div class="md:w-1/2 flex-col flex justify-center  h-[700px]">
             <img ngSrc="../../../assets/team.svg" width="600" height="588" alt="imgMain" priority>
             <div>
                 <p class="font-primary font-semibold text-[30px]">Equipe capacitada</p>
                 <p class="md:w-[600px] text-[#475569]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur.</p>
             </div>
         </div>
-        <div class="md:w-1/2 flex flex-col items-end justify-center">
+        <div class="md:w-1/2 flex flex-col items-end justify-center h-[700px]">
             <img ngSrc="../../../assets/project-guide.svg" width="600" height="588" alt="imgMain" priority>    
             <p class="md:text-right font-primary font-semibold text-[30px]">Seus projetos guiados do zero</p>
             <p class="md:text-right md:w-[600px] text-[#475569]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur.</p>
